Refactoring: one file per controller

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="https://cdn.rawgit.com/gdi2290/angular-websocket/v1.0.9/angular-websocket.min.js" ></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/app.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/alertService.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/marketPriceController.js")"></script>
     </head>
     <body>
 		
