--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -3,20 +3,10 @@
 @main("Welcome to Play") {
 
 
-
-
-<div data-ng-controller="MyController">
-  <ol>
-    <li data-ng-repeat="quote in quotes">{{ quote }}</li>
-  </ol>
-
-	<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">
-	  {{ alert.msg }}
-	</alert>
-
-  <ol>
-    <li data-ng-repeat="i in currencies">{{ i }}</li>
-  </ol>
+<div data-ng-controller="MarketPriceController">
+  <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="alert.close()">
+    {{ alert.msg }}
+  </alert>
 
   <highchart class="chart" config="chartConfig" ></highchart>
 </div>
