--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -7,7 +7,9 @@
     	<title>@title</title>
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-    	<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.css")" />
+    	<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootswatch-superhero/css/bootstrap.css")" />
+    	<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootswatch-superhero/css/bootstrap-theme.css")" />
+    	
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular-route.js")"></script>
@@ -17,6 +19,7 @@
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/highstock/highstock.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/highcharts-ng/highcharts-ng.js")"></script>
 		<script type="text/javascript" src="https://cdn.rawgit.com/gdi2290/angular-websocket/v1.0.9/angular-websocket.min.js" ></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/highstockTheme.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/app.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/alertService.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/traderService.js")"></script>
