--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -26,6 +26,7 @@
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/ohlcGraphController.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/transactionController.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/traderController.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/evaluationReportController.js")"></script>
     </head>
     <body>
 		
