--- a/frontend/app/assets/stylesheets/main.css
+++ b/frontend/app/assets/stylesheets/main.css
@@ -1,4 +1,3 @@
-
 /**
  * ngTable styles
  **/
@@ -9,6 +8,7 @@
 .ng-table th.sortable.sort-asc:before {
 	content: '\25B2';
 }
+
 .ng-table th.sortable.sort-desc:before {
 	content: '\25BC';
 }
@@ -17,3 +17,18 @@
 	display: inline
 }
 
+/**
+ * Animations
+ **/
+.animate--fade-in.ng-enter {
+	-webkit-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-moz-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-ms-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	-o-transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	transition: 500ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+	opacity: 0;
+}
+
+.animate--fade-in.ng-enter-active, .animate--fade-in {
+	opacity: 1;
+}
