--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -14,7 +14,7 @@
 <tabset >
   	<tab heading="Transactions" data-ng-controller="TransactionController">
 	    <table ng-table="tableParams" class="table table-striped">
-	        <tr data-ng-repeat="t in $data">
+	        <tr data-ng-repeat="t in $data" class="animate--fade-in">
 	            <td data-title="'Time'" sortable="'timestamp'">{{ t.timestamp | date:'MM.dd.yyyy HH:mm:ss' }}</td>
 	            <td data-title="'Symbol'" sortable="['whatC.s', 'withC.s']">{{ t.whatC.s | uppercase }} / {{ t.withC.s | uppercase }}</td>
 	            <td data-title="'Price'" sortable="'price'">{{ t.price }}</td>
@@ -28,7 +28,7 @@
   	<tab heading="Statistics" data-ng-controller="EvaluationReportController">
   		<small>All currencies converted to {{ referenceCurrency }}</small>
 	    <table ng-table="tableParams" class="table table-striped">
-	        <tr data-ng-repeat="report in $data track by report.traderId">
+	        <tr data-ng-repeat="report in $data track by report.traderId" class="animate--fade-in">
 	            <td data-title="'ID'" sortable="'traderId'">{{ report.traderId }}</td>
 	            <td data-title="'Name'" sortable="'traderName'">{{ report.traderName }}</td>
 	            <td data-title="'Initial funds'" sortable="'initial'">{{ report.initial | number: 2 }}</td>
@@ -48,7 +48,7 @@
   	
   	<tab heading="Traders" data-ng-controller="TraderController">
 	    <table ng-table="tableParams" class="table table-striped">
-	        <tr data-ng-repeat="trader in $data track by trader.id">
+	        <tr data-ng-repeat="trader in $data track by trader.id" class="animate--fade-in">
 	            <td data-title="'ID'" sortable="'id'">{{ trader.id }}</td>
 	            <td data-title="'Name'" sortable="'name'">{{ trader.name }}</td>
 	            <td data-title="'Strategy'" sortable="'strategy'">{{ trader.strategy }}</td>
