--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -13,6 +13,7 @@
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular-route.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular-animate.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/ng-table/ng-table.min.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angular-ui-bootstrap/ui-bootstrap.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angular-ui-bootstrap/ui-bootstrap-tpls.js")"></script>
