Add button to trader table that allows to display transactions of that trader on the graph

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -57,6 +57,9 @@
 	            		<li data-ng-repeat="param in trader.parameters">{{ param }}</li>
 	            	</ul>
 	            </td>
+	            <td data-title="'Actions'">
+	            	<a href="" class="btn btn-primary btn-xs" ng-click="showTransactionsOnGraphFor(trader)">Show transactions on graph</a>
+	            </td>
 	        </tr>
 	  	</table>
   	</tab>
