--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -8,12 +8,12 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
     	<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootswatch-superhero/css/bootstrap.css")" />
-    	<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("lib/bootswatch-superhero/css/bootstrap-theme.css")" />
     	
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/jquery/jquery.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular-route.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angularjs/angular-animate.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("lib/angular-websocket/angular-websocket.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/ng-table/ng-table.min.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angular-ui-bootstrap/ui-bootstrap.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("lib/angular-ui-bootstrap/ui-bootstrap-tpls.js")"></script>
@@ -24,6 +24,9 @@
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/app.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/alertService.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/traderService.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/transactionService.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/ohlcGraphService.js")"></script>
+    	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/services/ohlcGraphTransactionFlagsService.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/ohlcGraphController.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/transactionController.js")"></script>
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/traderController.js")"></script>
