--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -33,7 +33,13 @@
     	<script type="text/javascript" src="@routes.Assets.versioned("javascripts/controllers/evaluationReportController.js")"></script>
     </head>
     <body>
-		
+		<div class="navbar navbar-default">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<span class="navbar-brand">Algorithmic Trading Simulation Dashboard</span>
+        		</div>
+			</div>
+		</div>
         @content
         
     </body>
