--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -28,12 +28,12 @@
   	<tab heading="Statistics" data-ng-controller="EvaluationReportController">
   		<small>All currencies converted to {{ referenceCurrency }}</small>
 	    <table ng-table="tableParams" class="table table-striped">
-	        <tr data-ng-repeat="report in $data track by report.traderId" class="animate--fade-in">
+	        <tr data-ng-repeat="report in $data" class="animate--fade-in">
 	            <td data-title="'ID'" sortable="'traderId'">{{ report.traderId }}</td>
 	            <td data-title="'Name'" sortable="'traderName'">{{ report.traderName }}</td>
 	            <td data-title="'Initial funds'" sortable="'initial'">{{ report.initial | number: 2 }}</td>
 	            <td data-title="'Current funds'" sortable="'current'">{{ report.current | number: 2 }}</td>
-	            <td data-title="'Total returns'" sortable="'totalReturns'">{{ report.totalReturns | number: 4 }}</td>
+	            <td data-title="'Total returns'" sortable="'totalReturns'">{{ report.totalReturns | percentage: 2 }}</td>
 	            <td data-title="'Volatility'" sortable="'volatility'">{{ report.volatility | number: 2 }}</td>
 	            <td data-title="'Drawdown'" sortable="'drawdown'">{{ report.drawdown | number: 2 }}</td>
 	            <td data-title="'Sharpe ratio'" sortable="'sharpeRatio'">{{ report.sharpeRatio | number: 2 }}</td>
@@ -48,7 +48,7 @@
   	
   	<tab heading="Traders" data-ng-controller="TraderController">
 	    <table ng-table="tableParams" class="table table-striped">
-	        <tr data-ng-repeat="trader in $data track by trader.id" class="animate--fade-in">
+	        <tr data-ng-repeat="trader in $data" class="animate--fade-in">
 	            <td data-title="'ID'" sortable="'id'">{{ trader.id }}</td>
 	            <td data-title="'Name'" sortable="'name'">{{ trader.name }}</td>
 	            <td data-title="'Strategy'" sortable="'strategy'">{{ trader.strategy }}</td>
